[tool.poetry]
name = "trakit"
version = "0.2.0"
description = "Guess additional information from track titles"
authors = [
    "Rato"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ratoaq2/trakit"
keywords = [
    "video",
    "mkv",
    "audio",
    "subtitles",
    "srt",
    "pgs",
    "sdh",
    "cc",
    "sup",
    "sub",
    "metadata",
    "movie",
    "episode",
    "tv",
    "track",
    "shows",
    "series",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
]

[tool.poetry.scripts]
trakit = "trakit.__main__:main"

[tool.poetry.dependencies]
python = "^3.8.1"
rebulk = "^3.1.0"
babelfish = "^0.6.0"
pyyaml = {version = "^6.0", optional = true}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pyyaml = "^6.0"
unidecode = "^1.3.6"
flake8 = "^6.0.0"
mypy = "^0.991"
flake8-import-order = "^0.18.2"
types-setuptools = "^65.6.0.3"
types-pyyaml = "^6.0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
